Rename fields in CredentialConfigurationDTO, context to contextURLs, credentialType to credentialTypes and order to credentialFieldsDisplayOrder
Signed-off-by: jackjain <jackjain1995@gmail.com>